--- a/Sarrafi Watchkit App/Base.lproj/Interface.storyboard
+++ b/Sarrafi Watchkit App/Base.lproj/Interface.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="16012"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Shabnam-Bold-FD.ttf">
@@ -20,34 +21,34 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Currency Controller-->
+        <!--Sarrafi-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="CurrencyController" customModule="Sarrafi_Watchkit_App_Extension">
+                <controller title="Sarrafi" id="AgC-eL-Hgc" customClass="CurrencyController" customModule="Sarrafi_Watchkit_App_Extension">
                     <items>
                         <table alignment="center" hidden="YES" pagingScroll="YES" id="YLS-Tv-l7f">
                             <items>
                                 <tableRow identifier="currency_row" id="6ey-fR-fpJ" customClass="CurrencyRow" customModule="Sarrafi_Watchkit_App_Extension">
                                     <group key="rootItem" width="1" height="0.0" alignment="left" layout="vertical" radius="6" spacing="5" id="kiJ-t6-aOl">
                                         <items>
-                                            <label width="1" alignment="center" verticalAlignment="center" text="ارز" textAlignment="right" id="rcX-Y8-Fax">
+                                            <label width="1" alignment="center" verticalAlignment="center" text="ارز" textAlignment="right" minimumScaleFactor="0.5" id="rcX-Y8-Fax">
                                                 <fontDescription key="font" name="Shabnam-FD" family="Shabnam FD" pointSize="15"/>
                                             </label>
-                                            <label width="1" alignment="center" verticalAlignment="center" text="- تومان" textAlignment="left" id="otu-wF-vys">
+                                            <label width="1" alignment="center" verticalAlignment="center" text="- تومان" textAlignment="left" minimumScaleFactor="0.5" id="otu-wF-vys">
                                                 <fontDescription key="font" name="Shabnam-Bold-FD" family="Shabnam FD" pointSize="17"/>
                                             </label>
                                             <group width="1" alignment="center" verticalAlignment="center" id="b7f-ky-KU3">
                                                 <items>
-                                                    <label width="0.5" alignment="left" text="تاریخ" textAlignment="left" id="vOM-Mr-HyR">
+                                                    <label width="0.5" alignment="left" text="تاریخ" textAlignment="left" minimumScaleFactor="0.5" id="vOM-Mr-HyR">
                                                         <fontDescription key="font" name="Shabnam-Light-FD" family="Shabnam FD" pointSize="12"/>
                                                     </label>
-                                                    <label width="0.5" alignment="left" text="تغییرات" textAlignment="right" id="xFB-Um-4Vo">
+                                                    <label width="0.5" alignment="left" text="تغییرات" textAlignment="right" minimumScaleFactor="0.5" id="xFB-Um-4Vo">
                                                         <fontDescription key="font" name="Shabnam-Light-FD" family="Shabnam FD" pointSize="12"/>
                                                     </label>
                                                 </items>
-                                                <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="3"/>
                                             </group>
                                         </items>
+                                        <edgeInsets key="margins" left="7" right="7" top="3" bottom="3"/>
                                     </group>
                                     <connections>
                                         <outlet property="background" destination="kiJ-t6-aOl" id="00p-WT-8Kg"/>
@@ -63,11 +64,12 @@
                         <group width="1" alignment="center" verticalAlignment="center" layout="vertical" spacing="5" id="hyj-u4-3jH">
                             <items>
                                 <imageView alignment="center" verticalAlignment="center" id="unZ-w9-DkB"/>
-                                <label alignment="center" verticalAlignment="center" text="خطا" id="pr1-K8-qBK">
+                                <label alignment="center" verticalAlignment="center" text="خطا" minimumScaleFactor="0.5" id="pr1-K8-qBK">
                                     <fontDescription key="font" name="Shabnam-FD" family="Shabnam FD" pointSize="14"/>
                                 </label>
                                 <button width="1" alignment="center" verticalAlignment="center" title="تلاش دوباره" id="QAr-eM-Js7">
-                                    <color key="titleColor" red="0.17254901959999999" green="0.66274509800000003" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" name="Accent"/>
+                                    <color key="backgroundColor" red="0.1764705882352941" green="0.54500001668930054" blue="0.94900000095367432" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" name="Shabnam-Medium-FD" family="Shabnam FD" pointSize="15"/>
                                     <connections>
                                         <action selector="tryAgainPressed" destination="AgC-eL-Hgc" id="jd3-pU-jl5"/>
@@ -93,7 +95,7 @@
                     <items>
                         <group width="1" height="1" alignment="center" verticalAlignment="center" layout="vertical" id="jXV-9l-Z72">
                             <items>
-                                <label width="1" alignment="center" verticalAlignment="center" text="ارز" textAlignment="center" id="pai-Sc-N4w">
+                                <label width="1" alignment="center" verticalAlignment="center" text="ارز" textAlignment="center" minimumScaleFactor="0.5" id="pai-Sc-N4w">
                                     <fontDescription key="font" name="Shabnam-FD" family="Shabnam FD" pointSize="17"/>
                                 </label>
                                 <label width="1" alignment="center" verticalAlignment="center" text="- ریال" textAlignment="center" minimumScaleFactor="0.5" id="aOF-zD-82k">
@@ -101,7 +103,7 @@
                                 </label>
                                 <group width="1" alignment="center" verticalAlignment="center" id="Rj6-HD-y5L">
                                     <items>
-                                        <label width="0.5" alignment="center" verticalAlignment="center" text="۰ ریال" textAlignment="center" minimumScaleFactor="0.59999999999999998" id="A0Q-XO-uXH">
+                                        <label width="0.5" alignment="center" verticalAlignment="center" text="۰ ریال" textAlignment="center" minimumScaleFactor="0.5" id="A0Q-XO-uXH">
                                             <fontDescription key="font" name="Shabnam-Light-FD" family="Shabnam FD" pointSize="14"/>
                                         </label>
                                         <label width="0.5" alignment="center" verticalAlignment="center" text="(0.0%)" textAlignment="center" minimumScaleFactor="0.5" id="2Ls-QQ-1K0">
@@ -137,7 +139,8 @@
                                     </items>
                                 </group>
                                 <label width="1" alignment="center" verticalAlignment="center" text="آخرین به‌روزرسانی: ---" textAlignment="center" minimumScaleFactor="0.5" id="lQ1-9i-Ce7">
-                                    <fontDescription key="font" name="Shabnam-FD" family="Shabnam FD" pointSize="10"/>
+                                    <color key="textColor" name="Accent"/>
+                                    <fontDescription key="font" name="Shabnam-FD" family="Shabnam FD" pointSize="11"/>
                                 </label>
                             </items>
                         </group>
@@ -156,4 +159,9 @@
             <point key="canvasLocation" x="308" y="29"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="Accent">
+            <color red="0.17599999904632568" green="0.54500001668930054" blue="0.94900000095367432" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
